# job-agent

./: .gitignore  AI_Agent_实习项目方案.md
job-agent/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
job-agent/app/: main.py
job-agent/app/agent/: graph.py  state.py
job-agent/app/agent/nodes/: analyzer.py  planner.py  retriever.py  rewriter.py
job-agent/app/api/: chat.py  eval.py  jd.py  upload.py
job-agent/app/core/: config.py  logging.py  rate_limit.py  trace.py
job-agent/app/eval/: judge.py  metrics.py  report.py  runner.py
job-agent/app/models/: db.py  schemas.py
job-agent/app/rag/: chunker.py  embedder.py  ingest.py  query_rewriter.py  reranker.py  reranker_api.py  retriever.py
job-agent/app/services/: conversation.py  llm.py  parser.py
job-agent/data/eval/: real_jd_cases.jsonl
job-agent/data/jds/: sample_jds.json
job-agent/docs/: DEPLOYMENT.md  PROGRESS.md
job-agent/frontend/: package-lock.json  package.json
job-agent/frontend/app/: globals.css  layout.tsx  page.tsx
job-agent/frontend/lib/: api.ts
job-agent/mcp/: server.py
job-agent/scripts/: build_real_eval_cases.py  chat_smoke.py  crawl_jds.py  eval_run.py  ingest.py  ingest_eval_jds.py  llm_smoke.py  real_jd_quality_smoke.py  retrieval_ab.py
job-agent/tests/: test_agent.py  test_agent_integration.py  test_chat_integration.py  test_conversation.py  test_db_integration.py  test_eval_cases.py  test_eval_judge.py  test_eval_report.py  test_eval_runner.py  test_health.py  test_llm.py  test_rag.py  test_rate_limit.py  test_vector_integration.py
(+38 files in other folders)
