[project]
name = "job-agent"
version = "0.1.0"
description = "AI 求职助手 - 简历 × JD 智能匹配与改写 Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "redis>=5.0",
    "qdrant-client>=1.12",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "openai>=1.50",
    "anthropic>=0.40",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "rank-bm25>=0.2",
    "httpx>=0.28",
    "sse-starlette>=2.0",
    "mcp>=1.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
ml = [
    "sentence-transformers>=3.0",
    "FlagEmbedding>=1.3",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "mcp*"]
exclude = ["data*", "scripts*", "tests*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
